crates/monochange/tests/snapshots/source_providers__multiline_release_request_body@gitea_release_pr.snap
---
source: crates/monochange/tests/source_providers.rs
expression: contents
---
## Prepared release

- command: `release-pr`
- package `core` -> `core/v1.0.1`

## Release notes

### core 1.0.1

### Fixes

- **add gitea fixture coverage.**

## Changed files

- Cargo.toml
- crates/core/CHANGELOG.md
- crates/core/Cargo.toml
