crates/monochange/tests/snapshots/source_providers__multiline_release_request_body@github_release_pr.snap
---
source: crates/monochange/tests/source_providers.rs
expression: contents
---
## Prepared release

- command: `release-pr`
- package `core` -> `core/v1.1.0`

## Release notes

### core 1.1.0

### Features

- **add github fixture coverage.**

## Changed files

- Cargo.toml
- crates/core/CHANGELOG.md
- crates/core/Cargo.toml
