crates/monochange/tests/snapshots/source_providers__source_provider_diagnostics_match_snapshot@gitea.snap
---
source: crates/monochange/tests/source_providers.rs
expression: redacted
---
{
  "changesets": [
    {
      "context": {
        "capabilities": {
          "actor_profiles": false,
          "commit_web_urls": true,
          "issue_comments": false,
          "related_issues": false,
          "review_request_lookup": false
        },
        "host": "codeberg.org",
        "introduced": null,
        "last_updated": null,
        "provider": "gitea",
        "related_issues": []
      },
      "details": null,
      "path": ".changeset/feature.md",
      "summary": "add gitea fixture coverage",
      "targets": [
        {
          "bump": "patch",
          "change_type": "patch",
          "evidence_refs": [],
          "id": "core",
          "kind": "package",
          "origin": "direct-change"
        }
      ]
    }
  ],
  "requested_changesets": [
    ".changeset/feature.md"
  ]
}
