crates/monochange/tests/snapshots/source_providers__source_provider_diagnostics_match_snapshot@github.snap
---
source: crates/monochange/tests/source_providers.rs
expression: redacted
---
{
  "changesets": [
    {
      "context": {
        "capabilities": {
          "actor_profiles": true,
          "commit_web_urls": true,
          "issue_comments": true,
          "related_issues": true,
          "review_request_lookup": true
        },
        "host": "github.com",
        "introduced": null,
        "last_updated": null,
        "provider": "github",
        "related_issues": []
      },
      "details": null,
      "path": ".changeset/feature.md",
      "summary": "add github fixture coverage",
      "targets": [
        {
          "bump": "minor",
          "change_type": "minor",
          "evidence_refs": [],
          "id": "core",
          "kind": "package",
          "origin": "direct-change"
        }
      ]
    }
  ],
  "requested_changesets": [
    ".changeset/feature.md"
  ]
}
