crates/monochange/tests/snapshots/source_providers__source_provider_diagnostics_match_snapshot@gitlab.snap
---
source: crates/monochange/tests/source_providers.rs
expression: redacted
---
{
  "changesets": [
    {
      "context": {
        "capabilities": {
          "actor_profiles": false,
          "commit_web_urls": true,
          "issue_comments": false,
          "related_issues": false,
          "review_request_lookup": false
        },
        "host": "gitlab.com",
        "introduced": null,
        "last_updated": null,
        "provider": "gitlab",
        "related_issues": []
      },
      "details": null,
      "path": ".changeset/feature.md",
      "summary": "add gitlab fixture coverage",
      "targets": [
        {
          "bump": "minor",
          "change_type": "minor",
          "evidence_refs": [],
          "id": "core",
          "kind": "package",
          "origin": "direct-change"
        }
      ]
    }
  ],
  "requested_changesets": [
    ".changeset/feature.md"
  ]
}
