crates/monochange/tests/snapshots/source_providers__source_provider_scenarios_match_snapshot@gitea_release_pr.snap
---
source: crates/monochange/tests/source_providers.rs
expression: redacted
---
{
  "issue_comments": [],
  "manifest": {
    "changed_files": [
      "Cargo.toml",
      "crates/core/CHANGELOG.md",
      "crates/core/Cargo.toml"
    ],
    "changelogs": [
      {
        "format": "monochange",
        "notes": {
          "sections": [
            {
              "collapsed": false,
              "entries": [
                "- **add gitea fixture coverage.**"
              ],
              "title": "Fixes"
            }
          ],
          "summary": [],
          "title": "core [1.0.1](https://codeberg.org/org/monochange/releases/tag/core/v1.0.1) ([DATE])"
        },
        "output": "default",
        "owner_id": "core",
        "owner_kind": "package",
        "path": "crates/core/CHANGELOG.md",
        "rendered": "[multiline text]",
        "stream": "default"
      }
    ],
    "changesets": [
      {
        "context": {
          "capabilities": {
            "actor_profiles": false,
            "commit_web_urls": true,
            "issue_comments": false,
            "related_issues": false,
            "review_request_lookup": false
          },
          "host": "codeberg.org",
          "introduced": null,
          "last_updated": null,
          "provider": "gitea",
          "related_issues": []
        },
        "details": null,
        "path": ".changeset/feature.md",
        "summary": "add gitea fixture coverage",
        "targets": [
          {
            "bump": "patch",
            "change_type": "patch",
            "evidence_refs": [],
            "id": "core",
            "kind": "package",
            "origin": "direct-change"
          }
        ]
      }
    ],
    "command": "release-pr",
    "deleted_changesets": [],
    "dry_run": true,
    "group_version": null,
    "package_publications": [
      {
        "ecosystem": "cargo",
        "mode": "builtin",
        "package": "core",
        "registry": "crates_io",
        "trusted_publishing": {
          "enabled": true,
          "environment": null,
          "mode": "required",
          "repository": null,
          "workflow": null
        },
        "version": "1.0.1"
      }
    ],
    "plan": {
      "compatibility_evidence": [],
      "decisions": [
        {
          "bump": "patch",
          "package": "cargo:crates/core/Cargo.toml",
          "planned_version": "1.0.1",
          "reasons": [
            "add gitea fixture coverage"
          ],
          "trigger": "direct-change",
          "upstream_sources": [
            "cargo:crates/core/Cargo.toml"
          ]
        }
      ],
      "groups": [],
      "unresolved_items": [],
      "warnings": [],
      "workspace_root": "."
    },
    "release_targets": [
      {
        "id": "core",
        "kind": "package",
        "members": [
          "core"
        ],
        "release": true,
        "rendered_changelog_title": "core [1.0.1](https://codeberg.org/org/monochange/releases/tag/core/v1.0.1) ([DATE])",
        "rendered_title": "core v1.0.1 ([DATE])",
        "tag": true,
        "tag_name": "core/v1.0.1",
        "version": "1.0.1",
        "version_format": "namespaced"
      }
    ],
    "released_packages": [
      "workflow-core"
    ],
    "version": "1.0.1"
  },
  "package_publish": null,
  "publish_rate_limits": null,
  "release_commit": null,
  "release_request": {
    "auto_merge": false,
    "base_branch": "main",
    "body": "[multiline text]",
    "commit_message": {
      "body": "[multiline text]",
      "subject": "chore(release): prepare release"
    },
    "head_branch": "monochange/release/release-pr",
    "labels": [
      "release"
    ],
    "owner": "org",
    "provider": "gitea",
    "repo": "monochange",
    "repository": "org/monochange",
    "title": "chore(release): prepare release"
  },
  "releases": []
}
