crates/monochange/tests/snapshots/source_providers__source_provider_scenarios_match_snapshot@gitlab_publish_release.snap
---
source: crates/monochange/tests/source_providers.rs
expression: redacted
---
{
  "issue_comments": [],
  "manifest": {
    "changed_files": [
      "Cargo.toml",
      "crates/core/CHANGELOG.md",
      "crates/core/Cargo.toml"
    ],
    "changelogs": [
      {
        "format": "monochange",
        "notes": {
          "sections": [
            {
              "collapsed": false,
              "entries": [
                "- **add gitlab fixture coverage.**"
              ],
              "title": "Features"
            }
          ],
          "summary": [],
          "title": "core [1.1.0](https://gitlab.com/group/monochange/-/releases/core/v1.1.0) ([DATE])"
        },
        "output": "default",
        "owner_id": "core",
        "owner_kind": "package",
        "path": "crates/core/CHANGELOG.md",
        "rendered": "[multiline text]",
        "stream": "default"
      }
    ],
    "changesets": [
      {
        "context": {
          "capabilities": {
            "actor_profiles": false,
            "commit_web_urls": true,
            "issue_comments": false,
            "related_issues": false,
            "review_request_lookup": false
          },
          "host": "gitlab.com",
          "introduced": null,
          "last_updated": null,
          "provider": "gitlab",
          "related_issues": []
        },
        "details": null,
        "path": ".changeset/feature.md",
        "summary": "add gitlab fixture coverage",
        "targets": [
          {
            "bump": "minor",
            "change_type": "minor",
            "evidence_refs": [],
            "id": "core",
            "kind": "package",
            "origin": "direct-change"
          }
        ]
      }
    ],
    "command": "publish-release",
    "deleted_changesets": [],
    "dry_run": true,
    "group_version": null,
    "package_publications": [
      {
        "ecosystem": "cargo",
        "mode": "builtin",
        "package": "core",
        "registry": "crates_io",
        "trusted_publishing": {
          "enabled": true,
          "environment": null,
          "mode": "required",
          "repository": null,
          "workflow": null
        },
        "version": "1.1.0"
      }
    ],
    "plan": {
      "compatibility_evidence": [],
      "decisions": [
        {
          "bump": "minor",
          "package": "cargo:crates/core/Cargo.toml",
          "planned_version": "1.1.0",
          "reasons": [
            "add gitlab fixture coverage"
          ],
          "trigger": "direct-change",
          "upstream_sources": [
            "cargo:crates/core/Cargo.toml"
          ]
        }
      ],
      "groups": [],
      "unresolved_items": [],
      "warnings": [],
      "workspace_root": "."
    },
    "release_targets": [
      {
        "id": "core",
        "kind": "package",
        "members": [
          "core"
        ],
        "release": true,
        "rendered_changelog_title": "core [1.1.0](https://gitlab.com/group/monochange/-/releases/core/v1.1.0) ([DATE])",
        "rendered_title": "core v1.1.0 ([DATE])",
        "tag": true,
        "tag_name": "core/v1.1.0",
        "version": "1.1.0",
        "version_format": "namespaced"
      }
    ],
    "released_packages": [
      "workflow-core"
    ],
    "version": "1.1.0"
  },
  "package_publish": null,
  "publish_rate_limits": null,
  "release_commit": null,
  "release_request": null,
  "releases": [
    {
      "body": "[multiline text]",
      "draft": false,
      "generate_release_notes": false,
      "name": "core v1.1.0 ([DATE])",
      "owner": "group",
      "prerelease": false,
      "provider": "gitlab",
      "repo": "monochange",
      "repository": "group/monochange",
      "tag_name": "core/v1.1.0",
      "target_id": "core",
      "target_kind": "package"
    }
  ]
}
